[package]
name = "pi_trending"
version = "0.1.0"
edition = "2024"

[dependencies]

teloxide = "0.12"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
rand = "0.8"